# cpp_value_categories_talk

./: .gitmodules  Makefile  Makefile.snippets  README.md  ce_shortener.py  convert.py
mystring/: .clang-format  CMakeLists.txt  CompilerWarnings.cmake
mystring/include/: string.hpp
mystring/test/: test_string.cpp
slides/: beamerthemevertex.sty  break.tex  main.tex  part1.tex  part1_pv.tex  part2.tex  part2_pv.tex  part3.tex
snippets/: snippet1.asm  snippet1.cpp  snippet10.asm  snippet10.cfg  snippet10.cpp  snippet10_asmlst.tex  snippet10_cpplst.tex  snippet11a.cfg  snippet11a.cpp  snippet11a_cpplst.tex  snippet11b.asm  snippet11b.cfg  snippet11b.cpp  snippet11b_asmlst.tex  snippet11b_cpplst.tex  snippet11c.asm  snippet11c.cfg  snippet11c.cpp  snippet11c_asmlst.tex  snippet11c_cpplst.tex  snippet12a.cfg  snippet12a.cpp  snippet12a_cpplst.tex  snippet12b.asm  snippet12b.cfg  snippet12b.cpp  snippet12b_asmlst.tex  snippet12b_cpplst.tex  snippet13a.cfg  snippet13a.cpp  snippet13a_cpplst.tex  snippet13b.asm  snippet13b.cfg  snippet13b.cpp  snippet13b_asmlst.tex  snippet13b_cpplst.tex  snippet14a.cfg  snippet14a.cpp  snippet14a_cpplst.tex  snippet14b.asm  (+298 more)
